deploy/service_k8s/svc-upload.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-upload
  labels:
    app: svc-upload
spec:
  ports:
    - port: 8080
      protocol: TCP
    selector:
      app: svc-upload

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: svc-upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-upload
  template:
    metadata:
      labels:
        app: svc-upload
    spec:
      containers:
        - name: svc-upload
          command: [
            "/upload",
            "--server_address=0.0.0.0:8080",
            "--broker_address=0.0.0.0:10001",
            "--registry=kubernetes"
          ]
          image: pan.go/upload
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: apigw-port
            - containerPort: 28080
              name: uploadrest
