deploy/service_k8s/svc_apigw.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-apigw
  labels:
    app: svc-apigw
spec:
  ports:
    - port: 8080
      protocol: TCP
    selector:
      app: svc-apigw

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: svc-apigw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-apigw
  template:
    metadata:
      labels:
        app: svc-apigw
    spec:
      containers:
        - name: svc-apigw
          command: [
            "/apigw",
            "--registry=kubernetes"
          ]
          image: pan.go/apigw
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: apigw-port
